# sysrun

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  go.mod  go.sum  syspwd.go  syssrv.go  syssrv.service  syssrv.service.in
config/: config.go  config.go.in
front/: README.md  babel.config.js  babel.config.json  package-lock.json  package.json  webpack.config.devel.js  webpack.config.prod.js
front/src/: Layout.jsx  Login.jsx  Menu.jsx  NotFound.jsx  Pager.jsx  UserCreate.jsx  UserDelete.jsx  UserUpdate.jsx  Users.jsx  Vm.jsx  VmShutdown.jsx  VmStart.jsx  VmStop.jsx  Vms.jsx  _app-after.scss  index.html  main.jsx
init.d/: sysrun.in
public/: bundle.38d3ced35878.js  bundle.7cebf8196f1e.js  bundle.9c8e32.js  bundle.a2ce98.js  bundle.a3818d.css  bundle.a3818da6a412.css  bundle.d58c19467c65.js  bundle.ef5603.js  index.html
server/: server.go  server.go.orig
server/user-controller/: user_controller.go
server/user-model/: user_model.go
server/vm-controller/: vm_controller.go  vm_controller_test.go
server/vm-model/: vm_model.go  vm_model_test.go
tools/: file.go  file_test.go
